squash some bugs

--- a/css/bootstrap-theme.css
+++ b/css/bootstrap-theme.css
@@ -298,7 +298,7 @@ p.lead {
     -webkit-animation-delay: 2s;
 	animation-delay: 2s;
 	opacity: 0;
-	background: url('../images/stars-four.png') bottom left repeat-y;	
+	background: url('../images/stars-four.png') -200px -120px repeat-y;	
 }
 
 
